# bilby-numpyro

./: LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-to-pypi.yml  tests.yml
bilby_numpyro/: numpyro.py  utils.py
src/demo_sampler_bilby/: __init__.py  plugin.py
tests/: test_bilby_integration.py
